--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,41 @@
+﻿asgiref==3.6.0
+atlassian-python-api==4.0.4
+beautifulsoup4==4.13.4
+certifi==2025.6.15
+channels==4.0.0
+charset-normalizer==3.4.2
+coreapi==2.3.3
+coreschema==0.0.4
+Deprecated==1.2.18
+dj-stripe==2.8.4
 Django==4.2
+django-cors-headers==4.7.0
+django-filter==23.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.4
-channels==4.0.0
-asgiref==3.6.0
+idna==3.10
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.1.6
+jmespath==1.0.1
+MarkupSafe==3.0.2
+oauthlib==3.3.0
+packaging==25.0
+pillow==11.2.1
+PyJWT==2.10.1
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
+requests-oauthlib==2.0.0
+ruamel.yaml==0.18.14
+ruamel.yaml.clib==0.2.12
+setuptools==80.9.0
+soupsieve==2.7
 sqlparse==0.4.3
-pytz>=2023.3
-django-cors-headers
-pillow
-dj-stripe==2.8.4
-atlassian-python-api==4.0.4
-ruamel.yaml>=0.16.13
-django-filter==23.5
+stripe==4.2.0
+typing_extensions==4.14.0
+tzdata==2025.2
+uritemplate==4.2.0
+urllib3==2.4.0
+wrapt==1.17.2
